meecast (0.4.3) unstable; urgency=low

  * Added current weather for gismeteo.ru source 

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 5 Nov 2011 19:24:20 +0200

meecast (0.4.2) unstable; urgency=low

  * Fixed problem with first day of month for weather.com
  * Updated Germany, French, Russian and Finish translations 
  * Added stations in yr.no database (Poland, Australia)
  * Enabled russian names for stations of source gismeteo.ru in locale RU
  * Fixed bug #12482  Missing translation for 'Exit' menu item (Fremantle)
  * Added search for location by GPS 
  * Fixed bug #12479 - Missing translation "Enter search"
  * Fixed bug #12481 - Confirmation dialog when deleting a station (added
    confirmation dialog)

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 5 Nov 2011 19:24:20 +0200

meecast (0.4.1) unstable; urgency=low

  * Removed old code for Omweather(Fremantle) from postrm script
  * Added details info for today weather (day and night)
  * Fixed bug with wind speed units settings
  * Added Russian, Finish, Spain, Polish and Germany description to package
  * Updated Germany translation 
  * Added stations in yr.no database (United Kingdom, Austria, Switzerland,
    Russia)
  * Added symbol '%' to string Ppcp
  * Fixed term Fahrenheit 

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 23 Oct 2011 09:24:20 +0200

meecast (0.3.34) unstable; urgency=low

  * Improved in event widget
  * Added stations in yr.no database (Belarus, Finland, Sweden, Germany, Greece,
    Macedonia, France)
  * Fixed problem with Macedonia in yr.no database

 -- Vlad Vasiliev <vlad@gas.by>  Tue, 18 Oct 2011 09:24:20 +0200

meecast (0.3.33) unstable; urgency=low

  * removed qt-components-base-icons from dependences for fremantle version

 -- vlad vasiliev <vlad@gas.by>  Sun, 9 Oct 2011 09:24:20 +0200

meecast (0.3.32) unstable; urgency=low

  * Changed wind icon to show actual wind direction
  * Fixed problem for Fremantle with old version of QtComponents
